--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,8 @@ dependencies {
 
 	// Thư viện bổ sung
 	implementation 'com.neovisionaries:nv-i18n:1.29'
-	implementation 'org.springframework.data:spring-data-rest-core:4.1.4'
+	// Nếu không cần Spring Data REST, bạn có thể loại bỏ dòng dưới
+	// implementation 'org.springframework.data:spring-data-rest-core:4.1.4'
 
 	// Lombok
 	compileOnly 'org.projectlombok:lombok'
@@ -47,11 +48,9 @@ dependencies {
 	// Thử nghiệm
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
+	// testRuntimeOnly 'org.junit.platform:junit-platform-launcher' // Có thể loại bỏ nếu không cần
 }
+
 
 
 tasks.named('test') {
