--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=lab-week-05
+spring.datasource.url=jdbc:mariadb://localhost:3306/works
+spring.datasource.username=root
+spring.datasource.password=sapassword
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
